--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        devshell: [javascript, rust, torch, torch-nocuda, flutter, gradle8]
+        devshell: [javascript, rust, torch-nocuda, flutter, gradle8]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
